Bug 419959 - Impossible to update items using the QtQuick GHNS dialog: "Unknown Open Collaboration Service API error. (0)"
Summary: Impossible to update items using the QtQuick GHNS dialog: "Unknown Open Colla...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.69.0
Platform: Arch Linux Linux
: VHI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: regression
: 399750 420119 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-04-11 14:14 UTC by Patrick Silva
Modified: 2020-09-29 21:11 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.71
Sentry Crash Report:


Attachments
screen recording (1.33 MB, video/webm)
2020-04-11 14:14 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-04-11 14:14:57 UTC
Created attachment 127448 [details]
screen recording

Watch the attached screen recording please.

EXPECTED RESULT
any icon theme should be updated without any error message.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.18.4
KDE Frameworks Version: 5.69.0
Qt Version: 5.14.2
Comment 1 Nate Graham 2020-04-15 15:12:35 UTC
I can reproduce with global themes too.
Comment 2 Nate Graham 2020-04-15 18:12:27 UTC
*** Bug 420119 has been marked as a duplicate of this bug. ***
Comment 3 Dan Leinir Turthra Jensen 2020-04-21 09:23:34 UTC
Right, i can confirm this is happening... At least i can debug it properly now that there's stuff for me to update (thanks icon theme makers for being prolific and pushing out updates with some regularity!).
Comment 4 Dan Leinir Turthra Jensen 2020-04-27 09:41:27 UTC
There we go. Patch uploaded attempting to fix this issue: https://phabricator.kde.org/D29222
Comment 5 Dan Leinir Turthra Jensen 2020-05-04 10:46:21 UTC
Git commit 12642a1c0174bb4f0cd3163fee9f8e66f5959c32 by Dan Leinir Turthra Jensen.
Committed on 04/05/2020 at 10:46.
Pushed by leinir into branch 'master'.

Fix update auto selection

Summary:
The new autoselection for updating installed entries would firstly
not be looking at the right amount of download links, and further it
would not be able to identify the links it needed to, as it did not
look at the descriptive names (where the filename is often stored),
which then would not match. These changes ensure that we look at
the right bits of information when doing this check. End result is
that updating works.

* Ensure that the cache doesn't forget installing and updating items
* Analyse more of the download link information, and use correct counts

Test Plan:
Find an item in some KNS dialog in need of updating, and click the Update button

On the console, when launched using the correct logging categories, will
tell you about the selection process (and the UI will show that an update
is in progress, and eventually that it is completed). To do this check with
the icons kcm, run it like so:

  QT_LOGGING_RULES="org.kde.knewstuff*=true" kcmshell5 kcm_icons

Reviewers: #frameworks, #plasma, bugseforuns, ngraham, mart

Reviewed By: #plasma, mart

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29222

M  +7    -1    src/core/cache.cpp
M  +28   -4    src/core/engine.cpp

https://commits.kde.org/knewstuff/12642a1c0174bb4f0cd3163fee9f8e66f5959c32
Comment 6 Nate Graham 2020-09-29 21:11:06 UTC
*** Bug 399750 has been marked as a duplicate of this bug. ***