src/core/cache.cpp
@@ -224,7 +224,13 @@ void Cache::writeRegistry()
     QDomElement root = doc.createElement(QStringLiteral("hotnewstuffregistry"));
     doc.appendChild(root);
 
-    for (const EntryInternal &entry : qAsConst(cache)) {
+    for (EntryInternal entry : cache) {
+        // This might possibly seem a little naughty, but the cache data only cares about installed
+        // items, and in reality Updateable will be set when checking installed items against
+        // the remote server's information on the load of the cache
+        if (entry.status() == KNS3::Entry::Updating || entry.status() == KNS3::Entry::Installing) {
+            entry.setStatus(KNS3::Entry::Installed);
+        }
         // Write the entry, unless the policy is CacheNever and the entry is not installed.
         if (entry.status() == KNS3::Entry::Installed || entry.status() == KNS3::Entry::Updateable) {
             QDomElement exml = entry.entryXML();
